chore: hello world

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <body>
-    <input id="input-long" />
-    <button id="button-short">Short Url</button>
+    Hello World
   </body>
 </html>
