chore: stub button behaviour

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <input id="input-long" />
     <button id="button-short">Short Url</button>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
