chore: link the ui

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <input id="input-long" />
     <button id="button-short">Short Url</button>
+    <a id="link-short" href="#"></a>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
